improve functionality in the api functions
